<resources>
	<string name="app_name">MASAI Concierge Beta</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">Settings</string>
	<string name="nav_profile">Profile</string>
	<string name="nav_tickets">My Reservations</string>
	<string name="nav_conversation_history">Chat History</string>
	<string name="nav_settings">Settings</string>
	<string name="nav_help">Help \u0026 Feedback</string>
	<string name="title_activity_login">Login</string>
	<string name="loading_data">loading data</string>
	<string name="hint_user">Username</string>
	<string name="hint_email">Email</string>
	<string name="hint_pass">Password</string>
	<string name="username_or_email">E-Mail Address</string>
	<string name="hint_pass2">Repeat Password</string>
	<string name="update">Update</string>
	<string name="book">Book</string>
	<string name="price_low" formatted="false">Price (Low): %s,-</string>
	<string name="price_high" formatted="false">Price (High): %s,-</string>
	<string name="passwords_dont_match">Passwords don\'t match</string>
	<string name="name">Name</string>
	<string name="username">Username</string>
	<string name="register">Register</string>
	<string name="register_now">Register now</string>
	<string name="set_username">Set username</string>
	<string name="reset_password">Forgot password?</string>
	<string name="enter_correct_email">Please enter a correct E-Mail address!</string>
	<string name="enter_correct_phone">Please enter a correct phone number!</string>
	<string name="enter_correct_name">Please enter a correct username!</string>
	<string name="fill_out_firstname">Please enter a firstname!</string>
	<string name="fill_out_lastname">Please enter a lastname!</string>
	<string name="enter_password">Please enter a password!</string>
	<string name="register_error">Error while registering</string>
	<string name="no_internet_error">No Internet connection available</string>
	<string name="reset_pass_email_fail">Could not send reset instructions to the provided address.</string>
	<string name="set_username_fail">Could not set username. Check your connection and try different login.</string>
	<string name="profile">Profile</string>
	<string name="search">Search</string>
	<string name="call">Call</string>
	<string name="map">Map</string>
	<string name="login">Login</string>
	<string name="title_activity_chat">ChatActivity</string>
	<string name="user_joined" formatted="false">%s joined</string>
	<string name="write_message">Say something...</string>
	<string name="select_host">Select Host</string>
	<string name="sync_sending">Sending...</string>
	<string name="sync_failed">Tap to retry</string>
	<string name="connection_restore">Reconnecting...</string>
	<string name="connection_reestablished">Successfully connected</string>
	<string name="try_again">Retry</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="day_format">%s •\u0020</string>
	<string name="recent_date_format" formatted="false"> HH:mm aa</string>
	<string name="month_date_format">MM-dd • HH:mm aa</string>
	<string name="full_date_format">yyyy-MM-dd • HH:mm aa</string>
	<string name="am">AM</string>
	<string name="pm">PM</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
	<string name="january">January</string>
	<string name="february">February</string>
	<string name="march">March</string>
	<string name="april">April</string>
	<string name="may">May</string>
	<string name="june">June</string>
	<string name="july">July</string>
	<string name="august">August</string>
	<string name="september">September</string>
	<string name="october">October</string>
	<string name="november">November</string>
	<string name="december">December</string>
	<string name="just_now">just now</string>
	<string name="suggested_connections">Tap to see suggestions</string>
	<string name="minutes_ago">" minutes ago"</string>
	<string name="a_minute_ago">a minute ago</string>
	<string name="an_hour_ago">an hour ago</string>
	<string name="hours_ago">\u0020hours ago</string>
	<string name="days_ago">\u0020days ago</string>
	<string name="check_in">Check in</string>
	<string name="check_out">Check out</string>
	<string name="duration">Duration</string>
	<string name="days">Days</string>
	<string name="confirmation_number">Confirmation Number</string>
	<string name="departs">Departs</string>
	<string name="arrives">Arrives</string>
	<string name="terminal">Terminal</string>
	<string name="gate">Gate</string>
	<string name="flight_duration">Flight duration</string>
	<string name="passenger_name">Passenger name</string>
	<string name="travel_duration">Travel duration</string>
	<string name="flight_duration_format" formatted="false">%d h. %d min</string>
	<string name="app_not_found">Application not found</string>
	<string name="int_tag">int_tag</string>
	<string name="new_messages">New messages \u2193</string>
	<string name="seat">Seat</string>
	<string name="class_type">Class Type</string>
	<string name="from">From:</string>
	<string name="to">To:</string>
	<string name="image_not_offline">Image is not available offline</string>
	<string name="image_error">Image error</string>
	<string name="select_photo_source">Select photo from:</string>
	<string name="uploading_file">Uploading file</string>
	<string name="user_shared_photo_at" formatted="false">%s shared a image at %s</string>
	<string name="user_shared_photo" formatted="false">%s shared an image</string>
	<string name="user_shared_file" formatted="false">%s shared a file</string>
	<string name="user_shared_location" formatted="false">%s shared a location</string>
	<string name="please_give_us_access_to_your_files">To add a file a permission to read files is required.</string>
	<string name="no_access_to_files_info">To add a file, permissions to read files are required. App permissions can be changed in app settings</string>
	<string name="file_too_big_error">File is too big...</string>
	<string name="please_give_us_access_to_write_your_files">To take a picture permission to write files is required.</string>
	<string name="no_access_to_write_files_info">To take a picture, permissions to write files are required. App permissions can be changed in app settings</string>
	<string name="upload_failed">File upload failed. Please try again!</string>
	<string name="reset_pass_email_sent">Password has been reset successfully. An email has been sent to the provided address.</string>
	<string name="login_failed">Login failed! Please re-enter your credentials!</string>
	<string name="hey_user" formatted="false">Hey %s</string>
	<string name="please_give_us_access_to_your_location">To share location a location permission is required</string>
	<string name="no_access_to_location">To share a location, permissions are required. App permissions can be changed in app settings</string>
	<string name="share">Share </string>
	<string name="cancel">Cancel</string>
	<string name="invalid_file_type">Invalid file type.</string>
	<string name="ok">OK</string>
	<string name="server_error">Server error</string>
	<string name="email_exist_error">E-Mail already exists. Please sign in!</string>
	<string name="username_taken">Username is already taken</string>
	<string name="help_and_feedback">Help and Feedback</string>
	<string name="or">or</string>
	<string name="logout">Logout</string>
	<string name="sign_in">Sign in</string>
	<string name="no_account">No account?</string>
	<string name="bad_user_or_pass">User or password incorrect</string>
	<string name="user_does_not_exist">User does not exist</string>
	<string name="incorrect_password">Incorrect password</string>
	<string name="image">Image</string>
	<string name="image_view_tag_source_file">IMAGE_VIEW_TAG_SOURCE_FILE</string>
	<string name="image_view_tag_source_url">IMAGE_VIEW_TAG_SOURCE_URL</string>
	<string name="google_cards_position_key">GOOGLE_CARDS_POSITION_KEY</string>
	<string name="download_started">Download started, check notification bar</string>
	<string name="request_travelfolder_permission">Request for TravelFolder access permission</string>
	<string name="request_access">Request Access</string>
	<string name="request_access_query">By agreeing to the access request, you approve to the collection, processing and use of your personal information required to provide our services. You can revoke your approve at any time.</string>
	<string name="message_options_content">Do you want to try sending message again or open message?</string>
	<string name="resend">Resend</string>
	<string name="open">Open</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="permission_granted">You have granted permission to the TravelFolder</string>
	<string name="permission_denied">You have denied permission to the TravelFolder</string>
	<string name="permission_title">*permission_email_title*</string>
	<string name="permission_email_check">*permission_email_check*</string>
	<string name="feature_coming_soon">This feature will soon be available.</string>
	<string name="payment_info">Payment Information</string>
	<string name="private_address">Private Address</string>
	<string name="billing_address">Billing Address</string>
	<string name="contact_info">Contact Information</string>
	<string name="personal_info">Personal Information</string>
	<string name="title">Title</string>
	<string name="firstname">Firstname</string>
	<string name="middlename">Middle Name</string>
	<string name="lastname">Lastname</string>
	<string name="birthdate">Birthdate</string>
	<string name="nationality">Nationality</string>
	<string name="address_line_1">Address line 1</string>
	<string name="address_line_2">Address line 2</string>
	<string name="city">City</string>
	<string name="state">State</string>
	<string name="zip">Zip</string>
	<string name="country">Country</string>
	<string name="email2">Contact-Email</string>
	<string name="email">Booking-Email</string>
	<string name="phone">Phone</string>
	<string name="contact_info_email_description">The email Address is used for booking confirmations. Note: If you make
	a booking, we will provide this e-mail in the booking process. The sender of booking confirmation is composed
	of an alphanumeric string and our URL (example: 449axc-3a11-45cd@oururl.com). Please check your SPAM folder if
	necessary.</string>
	<string name="company_name">Company Name</string>
	<string name="vat">VAT ID Number</string>
	<string name="credit_card">Credit Card</string>
	<string name="default_payment_method">Payment Method</string>
	<string name="passport">Passport</string>
	<string name="esta">ESTA</string>
	<string name="hotel">Hotel</string>
	<string name="flights">Flights</string>
	<string name="rental_car">Rental Car</string>
	<string name="train">Train</string>
	<string name="my_information">My Information</string>
	<string name="travel_preferences">Travel Preferences</string>
	<string name="access_management">Access Management</string>
	<string name="access_management_item_title">Access granted to other Users</string>
	<string name="revoke_access">Revoke Access</string>
	<string name="currently_no_access">Currently, no one has access to your profile.</string>
	<string name="currently_access_singular">Currently, %d user has access to your profile.</string>
	<string name="currently_access_plural">Currently, %d users have access to your profile</string>
	<string name="passport_number">Passport Number</string>
	<string name="country_of_issuance">Country of Issuance</string>
	<string name="city_of_issuance">City of Issuance</string>
	<string name="car">Car</string>
	<string name="nav_version_number">Version info</string>
</resources>