<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navView">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/sidebar_profile"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_tickets"
        android:icon="@drawable/sidebar_my_reservations"
        android:title="@string/nav_tickets" />
    <item
        android:id="@+id/nav_conversation_history"
        android:icon="@drawable/nav_icon_history"
        android:title="@string/nav_conversation_history" />
    <group android:enabled="true">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/sidebar_help"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_version_number"
            android:icon="@drawable/sidebar_help"
            android:title="@string/nav_version_number" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/sidebar_help"
            android:title="Privacy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/sidebar_logout"
            android:title="@string/logout" />
    </group>
</menu>
