<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/medium_grey"
			android:orientation="vertical"
			android:paddingLeft="@dimen/margin_m"
			android:paddingRight="@dimen/margin_m">

			<com.tolstykh.textviewrichdrawable.TextViewRichDrawable
				android:id="@+id/activity_journey_preferences_passport"
				style="@style/TextViewRichDrawableStyle"
				android:layout_marginTop="@dimen/margin_l"
				android:drawableLeft="@drawable/ic_action_icon_passport"
				android:drawableRight="@drawable/icon_arrow_right"
				android:paddingBottom="@dimen/textview_profile_padding_vertical"
				android:paddingLeft="@dimen/textview_profile_padding_horizontal"
				android:paddingRight="@dimen/textview_profile_padding_horizontal"
				android:paddingTop="@dimen/textview_profile_padding_vertical"
				android:text="@string/passport"
				app:compoundDrawableHeight="@dimen/textview_profile_drawable_size"
				app:compoundDrawableWidth="@dimen/textview_profile_drawable_size"/>

			<com.tolstykh.textviewrichdrawable.TextViewRichDrawable
				android:id="@+id/activity_journey_preferences_esta"
				style="@style/TextViewRichDrawableStyle"
				android:layout_marginTop="@dimen/margin_l"
				android:drawableLeft="@drawable/ic_action_icon_esta"
				android:drawableRight="@drawable/icon_arrow_right"
				android:paddingBottom="@dimen/textview_profile_padding_vertical"
				android:paddingLeft="@dimen/textview_profile_padding_horizontal"
				android:paddingRight="@dimen/textview_profile_padding_horizontal"
				android:paddingTop="@dimen/textview_profile_padding_vertical"
				android:text="@string/esta"
				app:compoundDrawableHeight="@dimen/textview_profile_drawable_size"
				app:compoundDrawableWidth="@dimen/textview_profile_drawable_size"/>

			<com.tolstykh.textviewrichdrawable.TextViewRichDrawable
				android:id="@+id/activity_journey_preferences_hotel"
				style="@style/TextViewRichDrawableStyle"
				android:layout_marginTop="@dimen/margin_l"
				android:drawableLeft="@drawable/ic_action_icon_hotel"
				android:drawableRight="@drawable/icon_arrow_right"
				android:paddingBottom="@dimen/textview_profile_padding_vertical"
				android:paddingLeft="@dimen/textview_profile_padding_horizontal"
				android:paddingRight="@dimen/textview_profile_padding_horizontal"
				android:paddingTop="@dimen/textview_profile_padding_vertical"
				android:text="@string/hotel"
				app:compoundDrawableHeight="@dimen/textview_profile_drawable_size"
				app:compoundDrawableWidth="@dimen/textview_profile_drawable_size"/>

			<com.tolstykh.textviewrichdrawable.TextViewRichDrawable
				android:id="@+id/activity_journey_preferences_flight"
				style="@style/TextViewRichDrawableStyle"
				android:layout_marginTop="@dimen/margin_l"
				android:drawableLeft="@drawable/ic_action_icon_flights"
				android:drawableRight="@drawable/icon_arrow_right"
				android:paddingBottom="@dimen/textview_profile_padding_vertical"
				android:paddingLeft="@dimen/textview_profile_padding_horizontal"
				android:paddingRight="@dimen/textview_profile_padding_horizontal"
				android:paddingTop="@dimen/textview_profile_padding_vertical"
				android:text="@string/flights"
				app:compoundDrawableHeight="@dimen/textview_profile_drawable_size"
				app:compoundDrawableWidth="@dimen/textview_profile_drawable_size"/>

			<com.tolstykh.textviewrichdrawable.TextViewRichDrawable
				android:id="@+id/activity_journey_preferences_car"
				style="@style/TextViewRichDrawableStyle"
				android:layout_marginTop="@dimen/margin_l"
				android:drawableLeft="@drawable/ic_action_icon_rental_car"
				android:drawableRight="@drawable/icon_arrow_right"
				android:paddingBottom="@dimen/textview_profile_padding_vertical"
				android:paddingLeft="@dimen/textview_profile_padding_horizontal"
				android:paddingRight="@dimen/textview_profile_padding_horizontal"
				android:paddingTop="@dimen/textview_profile_padding_vertical"
				android:text="@string/car"
				app:compoundDrawableHeight="@dimen/textview_profile_drawable_size"
				app:compoundDrawableWidth="@dimen/textview_profile_drawable_size"/>

			<com.tolstykh.textviewrichdrawable.TextViewRichDrawable
				android:id="@+id/activity_journey_preferences_train"
				style="@style/TextViewRichDrawableStyle"
				android:layout_marginTop="@dimen/margin_l"
				android:drawableLeft="@drawable/ic_action_icon_train"
				android:drawableRight="@drawable/icon_arrow_right"
				android:paddingBottom="@dimen/textview_profile_padding_vertical"
				android:paddingLeft="@dimen/textview_profile_padding_horizontal"
				android:paddingRight="@dimen/textview_profile_padding_horizontal"
				android:paddingTop="@dimen/textview_profile_padding_vertical"
				android:text="@string/train"
				app:compoundDrawableHeight="@dimen/textview_profile_drawable_size"
				app:compoundDrawableWidth="@dimen/textview_profile_drawable_size"/>

		</LinearLayout>
	</ScrollView>
</layout>
